# third_party_modify

./: README.md
NetworkManager/: .gitignore  build.md  crash_reproducer.cpp  crash_reproducer_advanced.cpp
NetworkManager/clients/cli/: CHANGES.md  README-libnmcli.md  SUCCESS.md  common.c  libnmcli.h  meson.build  nmcli-example.c  nmcli-example.cpp  nmcli.c  nmcli.h  test-libnmcli.sh
NetworkManager/clients/common/: nm-client-utils.c
dmidecode/dmi_ext/: Makefile  dmi_decode_ext.c  dmi_decode_ext.h  dmi_paths.h  example.c
dmidecode/dmidecode-3.2/: Makefile
